# leadScrapper

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: app.py  requirements.txt
backend/api/: routes.py
backend/core/: config.py  task_manager.py
backend/database/: db.py  models.py
backend/exporter/: csv_exporter.py
backend/parser/: extractor.py
backend/processing/: cleaner.py  enricher.py
backend/scraper/: dorks_scraper.py  maps_scraper.py
backend/utils/: helpers.py  logger.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: EnrichButton.jsx  ExportButton.jsx  Layout.jsx  LogsPanel.jsx  ProgressBar.jsx  ResultsTable.jsx  SearchForm.jsx  Toast.jsx
frontend/src/hooks/: useTaskPoller.js
frontend/src/pages/: Dashboard.jsx  Results.jsx  TaskHistory.jsx
frontend/src/services/: api.js
frontend/src/utils/: formatters.js
